# imdb_gpt

./: .dockerignore  .gitignore  DEVLOG.md  Dockerfile  LICENSE  README.md  config.py  dataset_size_cache.json  failed_entities.txt  latents_viewer.html  overall_unique_chars.json  project_to_string.py  pyproject.toml  requirements.txt  tf.dockerfile  tf_base.dockerfile  web_app.py
db/: database_schema.py  database_schemas.py
scripts/: __init__.py  attention_model.py  clean_empty_logs.py  convert_logs.py  create_datasets.py  create_normalized_tables.py  create_search_tables.py  create_vector_db.py  do_stats_on_dataset.py  download_imdb_dataset.py  inference.py  joint_edge_sampler.py  load_model.py  load_tsvs.py  look_at_log.py  map_entity_ids_to_sql.py  measure_joint_encoder_performance.py  model_visualizer.py  movie_stats.py  person_stats.py  plot_joint_latents_3d.py  precompute_edges_table.py  precompute_movie_people_seq.py  precompute_path_deltas.py  precompute_path_siren_cache.py  precompute_set_cache.py  print_db_schema.py  sql_filters.py  test.py  track_changes.py  train_autoencoder_corrector.py  train_image_autoencoder.py  train_image_siren.py  train_imdb_autoencoder.py  train_imdb_llm.py  train_imdb_people_decoder.py  train_imdb_sequence_decoder.py  train_imdb_siren.py  train_joint_autoencoder.py  train_many_to_many.py  (+5 more)
scripts/analysis/: performance_summary.py
scripts/autoencoder/: ae_loader.py  (+19 more)
templates/: index.html  movie.html  person.html
tests/: conftest.py  test_data_pipeline.py  test_fields.py  test_flask.py  test_model.py  test_training.py
(+100 files in other folders)
