[project]
name = "imdb-gpt-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras",
    "requests",
    "tensorboard",
    "tqdm",
    "openai",
    "datasets",
    "prettytable>=3.16.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "simplejson>=3.20.1",
    "tensorflow>=2.17.0",
]
