[project]
name = "imdb-gpt-2"
version = "0.1.0"
description = "IMDB autoencoders in PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "tensorboard",
    "tqdm",
    "openai",
    "datasets",
    "prettytable>=3.16.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "simplejson>=3.20.1",
    "requests",
    "matplotlib>=3.10.6",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "mlx-lm>=0.28.3",
    "huggingface-hub>=0.34.1",
    "imageio>=2.37.2",
]
